--- a/sass/main/_menu.scss
+++ b/sass/main/_menu.scss
@@ -23,7 +23,7 @@
     border-radius: .5rem;
     margin: 1.25rem;
     text-align: center;
-    background-color:$color-terciario;
+    background-color:$color-primario;
     transition: all 0.3s;
 }
 
