--- a/css/style.css
+++ b/css/style.css
@@ -87,23 +87,32 @@
   height: 100%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
-.img-delivery img {
-  width: 400px;
-  height: 604px;
-  border: solid black 4px;
-  margin: 1px;
+.container-delivery h3 {
+  text-align: center;
 }
 
-@media only screen and (min-width: 320px) and (max-width: 768px) {
-  .container-delivery {
-    display: flex;
-    justify-content: space-around;
+.container-delivery h3 a {
+  text-decoration: none;
+  color: white;
+}
+
+.container-delivery h3 a:hover {
+  cursor: pointer;
+  color: rgb(80, 9, 148);
+  transition: cubic-bezier();
+}
+
+@media (min-with: 400px) {
+  .delivery {
+    width: 100%;
+    height: auto;
   }
-  .img-delivery img {
-    width: 360px;
+  .img-delivery {
+    width: 300px;
     height: auto;
   }
 }
@@ -241,7 +250,7 @@ article h1 {
   border-radius: 0.5rem;
   margin: 1.25rem;
   text-align: center;
-  background-color: #000000;
+  background-color: rgb(27, 27, 26);
   transition: all 0.3s;
 }
 
@@ -305,7 +314,7 @@ article h1 {
   margin: 20px;
   border-radius: 6px;
   overflow: hidden;
-  background: #000000;
+  background: rgb(27, 27, 26);
   box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
   transition: all 400ms ease-out;
   cursor: default;
@@ -392,7 +401,7 @@ article h1 {
   color: blueviolet;
 }
 
-@media screen and (max-width: 51.25rem) {
+@media screen and (max-width: 800rem) {
   .section-footer {
     display: flex;
     flex-direction: row;
@@ -403,15 +412,22 @@ article h1 {
     margin-right: 1.875rem;
   }
 }
-@media screen and (max-width: 50rem) {
+@media screen and (max-width: 400px) {
   .section-footer {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
     width: auto;
     height: 20rem;
   }
+  .section-footer small {
+    text-align: center;
+  }
+}
+body {
+  background-color: rgb(27, 27, 26);
+  color: #faf2f2;
 }
 
 /*# sourceMappingURL=style.css.map */
