--- a/sass/main/_chefs.scss
+++ b/sass/main/_chefs.scss
@@ -16,7 +16,7 @@
 	margin: 20px;
 	border-radius: 6px;
 	overflow: hidden;
-	background:$color-terciario;
+	background:$color-primario;
 	box-shadow: 0px 1px 10px rgba(0,0,0,0.2);
 	transition: all 400ms ease-out;
 	cursor: default;
