--- a/sass/main/_delivery.scss
+++ b/sass/main/_delivery.scss
@@ -13,23 +13,31 @@
     height: 100%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-evenly;
+    align-items: center
     ;
 }
-
-.img-delivery img{
-    width: 400px;
-    height: 604px;
-    border: solid black 4px;
-    margin: 1px;
+.container-delivery h3{
+    text-align: center;
 }
-@media only screen and (min-width:320px) and (max-width:768px){
-    .container-delivery{
-        display: flex;
-        justify-content: space-around;
+.container-delivery h3 a {
+    text-decoration: none;
+    color: white;
+
+}
+.container-delivery h3 a:hover {
+    cursor: pointer;
+    color: rgb(80, 9, 148);
+    transition: cubic-bezier();
+}
+
+@media(min-with:400px){
+    .delivery{
+        width: 100%;
+        height: auto;
     }
-    .img-delivery img{
-        width: 360px;
+    .img-delivery{
+        width: 300px;
         height: auto;
     }
 }
