--- a/sass/footer/_footer.scss
+++ b/sass/footer/_footer.scss
@@ -35,7 +35,7 @@
 .section-footer ul li a:hover{
     color: blueviolet;
 }
-@media screen and (max-width: 800rem){
+@media screen and (max-width: 800px){
     .section-footer{
         display: flex;
         flex-direction: row;
