--- a/sass/main/_chefs.scss
+++ b/sass/main/_chefs.scss
@@ -22,8 +22,9 @@
 	cursor: default;
 }
 .carta:hover{
-	box-shadow: 5px 5px 20px rgba(0,0,0,0.4);
-	transform: translateY(-3%);
+    transform: scale(1.2) ;
+    -webkit-transform: scale(1.1) ;
+    -moz-transform: scale(1.1) ;
 }
 .carta img{
 	width: 100%;
