--- a/sass/main/_menu.scss
+++ b/sass/main/_menu.scss
@@ -28,8 +28,9 @@
 }
 
 .container-menu .menu:hover{
-    background-color: #000000aa;
-    transform: scale(0.90);
+    transform: scale(1.2) ;
+    -webkit-transform: scale(1.1) ;
+    -moz-transform: scale(1.1) ;
 }
 
 .container-menu .menu img{
